se realizo el cambio de los id por los uuid, ademas de realizar la autenticacion de los usuarios con devise y se implemento el diseño al login y al signup.

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -2,6 +2,10 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-/* .btn {
-  @apply px-4 py-2 bg-blue-600 text-white rounded;
-} */
+// .label-form{
+//   @apply px-1 text-sm text-gray-600;
+// }
+// .btn-submit {
+//   @apply px-4 bg-gray-700 text-white rounded;
+// }
+
