--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -10,5 +10,12 @@
   <%= @course.descripcion %>
 </p>
 
+<% @lessons.each do |l| %>
+<%= link_to course_lessons_path(@course) do%>
+<%= l.nombre %>
+<% end %>
+<br>
+<% end %>
+<br>
 <%= link_to 'Edit', edit_course_path(@course) %> |
 <%= link_to 'Back', courses_path %>
