--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,3 +29,102 @@
  .dropdown:hover .dropdown-menu {
   display: block;
 }
+.modal {
+    transition: opacity 0.25s ease;
+}
+body.modal-active {
+         overflow-x: hidden;
+         overflow-y: visible !important;
+}
+ .menu-down {
+     position: relative;
+     left: 95%;
+ }
+
+ .w-90 {
+     width: 92%;
+ }
+.menu::before {
+    content: "";
+    position: absolute;
+    top: -16px;
+    left: 93%;
+    transform: translateX(-50%);
+    border: 10px solid;
+    border-color: transparent transparent white transparent;
+
+}
+
+.menu-notificaions {
+    width: 24%;
+    height: 300px;
+    margin-right: 5%;
+}
+
+.notification {
+    border-radius: 10px;
+    width: 10px;
+    height: 10px;
+
+}
+
+#post_body {
+    width: 100%;
+    height: 100px;
+    border: 1px solid gray;
+    border-radius: 10px;
+}
+
+// .contenedor {
+//     height: 600px;
+//     overflow: hidden;
+//     overflow-y: scroll;
+
+//     .contenedor::-webkit-scrollbar {
+//         width: 15px;
+//         background: red;
+//     }
+// }
+
+// ::-webkit-scrollbar {
+//     width: 10px;
+//     background: transparent;
+// }
+
+// .contenedor::-webkit-scrollbar-thumb {
+//     background: gray;
+//     border-radius: 5px;
+//     margin-left: 20px;
+// }
+
+//  $color-f ondo: #ccc;
+
+//Funciones
+
+// @mixin crearBorder() {
+//     border: 5px solid red;
+//     border-radius: 10px;
+//     box-shadow: 0px 0px 0px black;
+// }
+
+// .caja{
+//     @include crearBorder()
+// }
+
+// @mixin crearBorder($color, "$size, $shadow) {
+//     border: 5px solid $color;
+//     border-radius: $size;
+//     box-shadow: 0px 0px 0px $shadow;
+// }
+
+// .caja{
+//     @include crearBorder(red, 5px, blue)
+// }
+
+// herencia
+
+// %alert-normal{
+//     border: 1px solid gray;
+//     padding: 10px;
+// }
+// .alert{
