--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,13 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body class="bg-gray-200">
-    <%= yield %>
+    <% if signed_in? %>
+      <%= render 'partials/navbar' %>
+    <div class="mt-20 w-full">
+      <%=yield %>
+    </div>
+    <%else%>
+      <%=yield%>
+    <%end%>
   </body>
 </html>
