--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,9 +26,9 @@
 //   0%{ left: -100%}
 //   100%{ left: 150%}
 // }
- .dropdown:hover .dropdown-menu {
-  display: block;
-}
+//  .dropdown:hover .dropdown-menu {
+//   display: block;
+// }
 .modal {
     transition: opacity 0.25s ease;
 }
