--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,30 +1,48 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Titulo</th>
-      <th>Descripcion</th>
-      <th>Users</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.titulo %></td>
-        <td><%= post.descripcion %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+<div class="flex bg-white shadow-lg rounded-lg mx-4 md:mx-auto my-5 max-w-md md:max-w-2xl "><!--horizantil margin is just for display-->
+   <div class="w-90 mx-auto flex items-start px-4 py-6">
+      <img class="w-8 h-8 rounded-full object-cover mr-4 shadow" src="https://images.unsplash.com/photo-1542156822-6924d1a71ace?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
+      <div class=" w-full">
+         <div class="flex items-center justify-between">
+            <h2 class="text-lg font-semibold text-gray-900 mt-1 -ml-2"><%# current_user.nombre%> <%# current_user.apellido%></h2>
+         </div>
+         <%# <p class="text-gray-700">@wjorellano.</p> %>
+         <%= link_to 'nueva publicación', new_post_path, {remote: true, class:"-mt-2 cursor-text bg-gray-200 text-gray-600 focus:outline-none focus:shadow-outline border border-gray-300 rounded-full py-2 px-4 block w-5/6 appearance-none modal-open"}  %>
+      </div>
+   </div>
+</div>
+<% @posts.each do |post| %>
+<div class="flex bg-white shadow-lg rounded-lg mx-4 md:mx-auto my-3 max-w-md md:max-w-2xl "><!--horizantil margin is just for display-->
+   <div class="w-full flex items-start px-4 py-6">
+      <div class="cursor-pointer -mt-6 menu-down">
+         <svg class=" h-6 w-6 text-gray-500"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round">
+            <circle cx="12" cy="12" r="1" /><circle cx="19" cy="12" r="1" /><circle cx="5" cy="12" r="1" />
+         </svg>
+      </div>
+      <img class="w-8 h-8 rounded-full object-cover mr-4 shadow" src="https://images.unsplash.com/photo-1542156822-6924d1a71ace?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
+      <div class=" w-full">
+         <div class="flex items-center justify-between">
+            <h2 class="text-lg font-semibold text-gray-900 mt-1 -ml-2"><%# current_user.nombre%> <%# current_user.apellido%></h2>
+            <small class="text-sm text-gray-700">22h ago</small>
+         </div><br>
+         <%# <p class="text-gray-700">@wjorellano.</p> %>
+         <p class="-ml-10 text-lg font-semibold text-gray-800"><%= post.titulo%></p>
+         <p class="-ml-10 w-90 mt-4 text-gray-700 text-sm"><%= post.descripcion%></p>
+         <div class="mt-4 -ml-10 flex items-center">
+            <div class="cursor-pointer flex text-gray-700 text-sm mr-3">
+               <svg fill="none" viewBox="0 0 24 24"  class="w-4 h-4 mr-1" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/>
+                </svg>
+               <span>12</span>
+            </div>
+            <div class="cursor-pointer flex text-gray-700 text-sm mr-8">
+               <svg fill="none" viewBox="0 0 24 24" class="w-4 h-4 mr-1" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z"/>
+               </svg>
+               <span>8</span>
+            </div>
+         </div>
+      </div>
+   </div>
+</div>   
+<% end %>
+<%= render 'modal-post'%>
