--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,7 +21,7 @@
       <img class="w-8 h-8 rounded-full object-cover mr-4 shadow" src="https://images.unsplash.com/photo-1542156822-6924d1a71ace?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
       <div class=" w-full">
          <div class="flex items-center justify-between">
-            <h2 class="text-lg font-semibold text-gray-900 mt-1 -ml-2"><%# current_user.nombre%> <%# current_user.apellido%></h2>
+            <h2 class="text-lg font-semibold text-gray-900 mt-1 -ml-2"><%= current_user.email%> <%# current_user.apellido%></h2>
             <small class="text-sm text-gray-700">22h ago</small>
          </div><br>
          <%# <p class="text-gray-700">@wjorellano.</p> %>
