--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es-CO">
   <head>
-    <%-signed_in? %>
-      <title><%= @titulo %></title>
+    <%- if signed_in? %>
+      <title><%= @title %></title>
+    <%else%>
+      <title>Proyecto2021</title>
     <%end%>
-    <title>Proyecto2021</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta charset="UTF-8" />
