--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,14 +1,16 @@
-
 <%= simple_form_for(@post) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
   <div class="form-inputs">
-    <%= f.text_field :titulo, class:"focus:outline-none mt-2 mb-2", placeholder:"Titulo de la publicación" %>
-    <%= f.text_area  :descripcion, class:"focus:outline-none border-transparent rounded border w-full h-64", placeholder:"Que estas pensando?"%>
+    <%= f.text_field :titulo,
+                     class:"rounded w-full h-8 text-gray-600 focus:outline-none",
+                     placeholder:"Titulo de la publicación.",
+                     autofocus: true %>
+    <textarea name="post[descripcion]" placeholder="¿Que estas pensando?" class="mt-3 p-1 rounded w-full h-56 text-gray-600 focus:outline-none" id="post[descripcion]"></textarea>
+    <%# f.text_area  :descripcion,
+      #              rows:"3",
+      #              class:"mt-3 p-1 rounded w-full h-56 text-gray-600 focus:outline-none",
+      #              placeholder:"¿Que estas pensando?"%>
   </div>
-
-  <div class="form-actions ">
-    <%= f.button :submit, "Publicar", class:"rounded py-1 px-2 text-gray-200 bg-gray-800" %>
+  <div class="form-actions w-20 ml-auto mt-4">
+    <%= f.button :submit, "Publicar", class:"cursor-pointer rounded py-1 px-3 text-gray-200 bg-gray-800"  %>
   </div>
 <% end %>
