--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,7 @@
   <body class="bg-gray-200">
     <%- if signed_in? %>
       <%= render 'partials/navbar' %>
-    <div class="mt-20 w-full">
-      <%=yield %>
-    </div>
+      <div class="mt-20 w-full"><%=yield %></div>
     <%else%>
       <%=yield%>
     <%end%>
