--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -53,14 +53,14 @@
         <div class="flex items-center md:ml-4">
           <div x-data="{ dropdownOpen: false }" class="">
             <button @click="dropdownOpen = !dropdownOpen" class="hover:bg-gray-700 relative border-transparent rounded-full text-white p-2 focus:outline-none">
-            <%#link_to notifications_path, {remote: true} do %>
+            <%= link_to notifications_path, {remote: true} do %>
             <%# if current_user.unviewed_notifications_count != 0 %>
               <small class="notification absolute bg-red-700 rounded-full text-white" id="notifications"></small>
             <%#end%> 
               <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"/>
               </svg>
-            <%#end%>
+            <%end%>
             </button>
             <div x-show="dropdownOpen" @click="dropdownOpen = false" class=" fixed inset-0 h-full w-full z-10"></div>
               <div x-show="dropdownOpen" class="menu absolute right-0 mt-2 py-2 menu-notificaions bg-white rounded-lg shadow-xl z-20">
@@ -120,6 +120,7 @@
       </div>
       <div class="mt-3 px-2" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
         <a class="mt-1 block px-3 py-2 rounded text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700"role="menuitem">configuraciones</a>
+        <%= link_to  "Notificaciones", notifications_path, class:"mt-1 block px-3 py-2 rounded text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700" %>
 		    <%= link_to "Salir", destroy_user_session_path, method: :delete, class:"mt-1 block px-3 py-2 rounded text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700" %>
       </div>
     </div>
