--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -2,9 +2,7 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16 ">
       <div class="flex items-center">
-        <a class="flex-shrink-0 font-bold text-white" href="/">Wjorellano
-          <img src=""/>
-        </a>
+        <a class="flex-shrink-0 font-bold text-white" href="/">Wjorellano<img src=""/></a>
         <div class="hidden lg:block">
           <div class="ml-6 flex items-baseline">
             <a starts_with="/" class="ml-4 px-3 py-2 rounded-full text-sm font-medium focus:outline-none text-gray-300 focus:text-white hover:bg-gray-700 focus:bg-gray-700" href="/">Home</a>
@@ -113,9 +111,7 @@
           <img class="w-8 h-8 rounded-full object-cover  shadow" src="https://images.unsplash.com/photo-1542156822-6924d1a71ace?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
         </div>
         <div class="ml-3">
-          <div class="text-base font-medium leading-none text-white">
-
-          </div>
+          <div class="text-base font-medium leading-none text-white"></div>
         </div>
       </div>
       <div class="mt-3 px-2" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
