ajustes en la vista post

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,7 +4,7 @@
                      class:"rounded w-full h-8 text-gray-600 focus:outline-none",
                      placeholder:"Titulo de la publicación.",
                      autofocus: true %>
-    <textarea name="post[descripcion]" placeholder="¿Que estas pensando?" class="mt-3 p-1 rounded w-full h-56 text-gray-600 focus:outline-none" id="post[descripcion]"></textarea>
+    <textarea name="post[descripcion]" placeholder="¿Que estas pensando?" class="leading-normal resize-none mt-3 p-1 rounded w-full h-56 text-gray-600 focus:outline-none" id="post[descripcion]"></textarea>
     <%# f.text_area  :descripcion,
       #              rows:"3",
       #              class:"mt-3 p-1 rounded w-full h-56 text-gray-600 focus:outline-none",
